# snappy

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  MODULE.bazel  Makefile.am  Makefile.in  NEWS  README  README.md  WORKSPACE  aclocal.m4  appveyor.yml  autogen.sh  cmake-config.h.in  config.h  config.h.in  configure  configure.ac  format_description.txt  framing_format.txt  index.html  params.json  patch.txt  snappy-c.cc  snappy-c.h  snappy-compress-uncompress-fuzzer.cc  snappy-internal.h  snappy-sinksource.cc  snappy-sinksource.h  snappy-stubs-internal.cc  snappy-stubs-internal.h  snappy-stubs-public.h  snappy-stubs-public.h.in  snappy-test.cc  (+9 more)
.github/workflows/: cifuzz.yml  riscv64-qemu-test.yaml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmake/: SnappyConfig.cmake  SnappyConfig.cmake.in  config.h.in  libsnappy.pc.in  snappy-stubs-public.h.in  snappy.pc.in  toolchain-riscv.cmake
docs/: README.md
opensource/: .bazelrc  BUILD.bazel
snappy-msvc/: README  README.rst  snappy.sln  snappy.vcproj  snappy.vcxproj  snappy.vcxproj.filters  stdint.h
testdata/: geo.protodata
