module(
    name = "snappy",
    version = "1.2.2",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

bazel_dep(
    name = "googletest",
    version = "1.17.0.bcr.2",
    dev_dependency = True,
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "google_benchmark",
    version = "1.9.5",
    dev_dependency = True,
    repo_name = "com_google_benchmark",
)

bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
